# ros-pointnet

./: CMakeLists.txt  README.md  package.xml
PointNet/pointnet/: dataset.py  model.py
PointNet/utils/: show3d_balls.py  show_cls.py  train_classification.py  train_my_dataset.py
ROSbridge/: __init__.py  tools.py
action/: pointnet.action
include/pointnet_ros/: pointnet_ros_label.h
launch/: recognition.launch
scripts/: classify_node.py  pointnetServer.py  read_pts.py
