<?xml version="1.0"?>
<package format="2">
    <name>pointnet_ros</name>
    <version>0.0.0</version>
    <description>The pointnet_ros package</description>
    <maintainer email="ou@todo.todo">ou</maintainer>
    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>rospy</depend>

    <depend>message_generation</depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>actionlib_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>

    <export/>
</package>
